<package format="2">
  <name>orb_slam2</name>
  <version>2.0.0</version>
  <description>ORB-SLAM2 package (jlowenz fork)</description>
  <maintainer email="jason.l.owens.civ@mail.mil">Jason Owens</maintainer>
  <license>GPLv3</license>  

  <build_depend>catkin</build_depend>
  <build_depend>cmake</build_depend>
  
  <export>
  </export>
</package>
